@@ -15,7 +15,6 @@ public class RegionsTableModel extends AbstractTableModel implements EcoSysObser
     private List<List<Object>> _data;
 
     RegionsTableModel(Controller ctrl) {
-        // TODO initialise the corresponding data structures
         _ctrl = ctrl;
         _data = new ArrayList<>();
         _ctrl.addObserver(this);
@@ -45,7 +44,7 @@ public class RegionsTableModel extends AbstractTableModel implements EcoSysObser
     @Override
     public Object getValueAt(int rowIndex, int columnIndex) {
         if (columnIndex == 0) {
-            return _data.get(rowIndex).get(0);
+            return _data.get(rowIndex).getFirst();
         } else if (columnIndex == 1) {
             return _data.get(rowIndex).get(1);
         } else if (columnIndex == 2) {
